# bulshitt

./: LICENSE  README.rst  pyproject.toml
docs/: conf.py  index.rst
src/tagger_evaluation/: __init__.py  __main__.py  __version__.py  cli.py
tests/unit/: test_api.py  test_cli.py
tests/unit/core/: test_config.py  test_logger.py
