[project]
name = "tagger_evaluation"
description = "Python application created from the gh:mdklatt/cookiecutter-python-app Cookiecutter template."
authors = [
    { name = "Payam Saemi", email = "payamsaemi@gmail.com" },
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "tomli==2.0.1; python_version<'3.11'"
]
dynamic = ["version", "readme"]

[project.urls]
"Homepage" = ""

[project.scripts]
tagger_evaluation = "tagger_evaluation.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1,<8",
    "sphinx>=6.2.1,<7",
    "sphinx_rtd_theme>=1.2.1,<2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "tagger_evaluation.__version__"}
readme = {file = ["README.rst"], content-type = "text/x-rst"}

[tool.setuptools.packages.find]
where = ["src"]
